--- a/package.json
+++ b/package.json
@@ -13,16 +13,25 @@
   "author": "Jimmy Breck-McKye",
   "license": "MIT",
   "devDependencies": {
+    "@types/codependency": "0.1.3",
+    "@types/keytar": "4.0.1",
     "@types/qs": "6.5.1",
     "@types/request": "2.47.1",
+    "@types/request-promise-native": "1.0.15",
     "electron": "3.0.3",
+    "keytar": "4.3.0",
     "typescript": "3.1.2"
   },
   "dependencies": {
-    "qs": "6.5.2",
-    "request": "2.88.0"
+    "codependency": "2.1.0",
+    "qs": "6.5.2"    
   },
   "peerDependencies": {
-    "electron": "3.0.3"
+    "electron": "3.0.3",
+    "request": "2.88.0",
+    "request-promise-native": "1.0.5"
+  },
+  "optionalPeerDependencies": {
+    "keytar": "4.3.0"
   }
 }
