Documentation + build script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Provides Auth0 authentication services for your Electron.js applicatioin",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [
     "Electron",
