--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "typescript": "4.1.3"
   },
   "dependencies": {
-    "qs": "6.5.2"
+    "qs": "6.5.2",
+    "got": "11.8.1"
   },
   "peerDependencies": {
     "electron": "^7.1.9"
