--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/keytar": "4.4.0",
+    "@types/node": "12.19.12",
     "@types/qs": "6.5.1",
     "@types/request": "2.47.1",
     "@types/request-promise-native": "1.0.15",
