--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-auth0-login",
-  "version": "1.4.1",
+  "version": "2.0.0",
   "description": "Provides Auth0 authentication services for your Electron.js application",
   "main": "dist/index.js",
   "scripts": {
@@ -21,25 +21,20 @@
     "url": "https://github.com/jbreckmckye/electron-auth0-login/issues"
   },
   "devDependencies": {
-    "@types/codependency": "0.1.3",
     "@types/keytar": "4.4.0",
+    "@types/node": "12.19.12",
     "@types/qs": "6.5.1",
     "@types/request": "2.47.1",
     "@types/request-promise-native": "1.0.15",
     "electron": "7.2.4",
     "keytar": "4.4.2",
-    "typescript": "3.1.2"
+    "typescript": "4.1.3"
   },
   "dependencies": {
-    "codependency": "2.1.0",
-    "qs": "6.5.2"
+    "qs": "6.5.2",
+    "got": "11.8.1"
   },
   "peerDependencies": {
-    "electron": "^7.1.9",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
-  },
-  "optionalPeerDependencies": {
-    "keytar": "^5.0.0"
+    "electron": "^7.1.9"
   }
 }
