--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "Provides Auth0 authentication services for your Electron.js application",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dist": "tsc"
   },
